--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,7 +2,13 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
+file.reference.java-cup-11a.jar=C:\\Users\\franz\\Documents\\GitHub\\compilador-octavo-semestre\\src\\dependencies\\java-cup-11a.jar
+file.reference.java-cup-11a.jar-1=C:\\Users\\franz\\Documents\\GitHub\\compilador-octavo-semestre\\src\\dependencies\\java-cup-11a.jar
+file.reference.java_cup.jar=C:\\Users\\franz\\Documents\\GitHub\\compilador-octavo-semestre\\src\\dependencies\\java_cup.jar
+file.reference.java_cup.jar-1=C:\\Users\\franz\\Documents\\GitHub\\compilador-octavo-semestre\\src\\dependencies\\java_cup.jar
+file.reference.JFlex.jar=C:\\Users\\franz\\Documents\\GitHub\\compilador-octavo-semestre\\src\\dependencies\\JFlex.jar
+file.reference.JFlex.jar-1=C:\\Users\\franz\\Documents\\GitHub\\compilador-octavo-semestre\\src\\dependencies\\JFlex.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\FernandoCaro\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=C:\\Users\\franz\\AppData\\Roaming\\NetBeans\\16\\build.properties
