--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Analizador2
 endorsed.classpath=
 excludes=
+file.reference.GitHub-compilador-octavo-semestre=.
 file.reference.java-cup-11a.jar=C:\\Users\\Alfredo\\Documents\\UP\\8Semestre\\Comp-Sim\\JCUP\\java-cup-11a.jar
 file.reference.java-cup-11a.jar-1=D:\\CODE\\java\\jars\\java-cup-11a.jar
 file.reference.java_cup.jar=C:\\Users\\Alfredo\\Documents\\UP\\8Semestre\\Comp-Sim\\JCUP\\java_cup.jar
@@ -49,7 +50,8 @@ javac.classpath=\
     ${file.reference.java_cup.jar}:\
     ${file.reference.JFlex.jar-1}:\
     ${file.reference.java-cup-11a.jar-1}:\
-    ${file.reference.java_cup.jar-1}
+    ${file.reference.java_cup.jar-1}:\
+    ${file.reference.GitHub-compilador-octavo-semestre}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
