--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,13 +35,15 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Analizador2
 endorsed.classpath=
 excludes=
-file.reference.GitHub-compilador-octavo-semestre=.
 file.reference.java-cup-11a.jar=C:\\Users\\Alfredo\\Documents\\UP\\8Semestre\\Comp-Sim\\JCUP\\java-cup-11a.jar
 file.reference.java-cup-11a.jar-1=D:\\CODE\\java\\jars\\java-cup-11a.jar
+file.reference.java-cup-11a.jar-2=src\\dependencies\\java-cup-11a.jar
 file.reference.java_cup.jar=C:\\Users\\Alfredo\\Documents\\UP\\8Semestre\\Comp-Sim\\JCUP\\java_cup.jar
 file.reference.java_cup.jar-1=D:\\CODE\\java\\jars\\java_cup.jar
+file.reference.java_cup.jar-2=src\\dependencies\\java_cup.jar
 file.reference.JFlex.jar=C:\\Users\\Alfredo\\Documents\\UP\\8Semestre\\Comp-Sim\\70. Material\\JFlex.jar
 file.reference.JFlex.jar-1=D:\\CODE\\java\\jars\\JFlex.jar
+file.reference.JFlex.jar-2=src\\dependencies\\JFlex.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -51,7 +53,9 @@ javac.classpath=\
     ${file.reference.JFlex.jar-1}:\
     ${file.reference.java-cup-11a.jar-1}:\
     ${file.reference.java_cup.jar-1}:\
-    ${file.reference.GitHub-compilador-octavo-semestre}
+    ${file.reference.JFlex.jar-2}:\
+    ${file.reference.java-cup-11a.jar-2}:\
+    ${file.reference.java_cup.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
