--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -11,4 +11,4 @@ file.reference.JFlex.jar-1=C:\\Users\\franz\\Documents\\GitHub\\compilador-octav
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\franz\\AppData\\Roaming\\NetBeans\\16\\build.properties
+user.properties.file=C:\\Users\\David Arcos\\AppData\\Roaming\\NetBeans\\16\\build.properties
